--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide position-absolute end-0 top-0" data-bs-ride="carousel" style="width: calc(100% - 305px); height: 824px;">
+    <div id="carouselExampleSlidesOnly" class="carousel slide position-absolute end-0 top-0" data-bs-ride="carousel" >
         <div class="carousel-inner">
           <div class="carousel-item" data-bs-interval="2000">
             <img src="assets/img/capa.jpg" class="d-block w-100">
@@ -34,10 +34,10 @@
     <header class="header-container">
         <div class="menu-list">
             <ul class="menu-list-options">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="filmes">Filmes</a></li>
-                <li><a href="#categorias">Categorias</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Filmes</a></li>
+                <li><a href="#">Categorias</a></li>
+                <li><a href="#">Sobre</a></li>
             </ul>
         </div>
         
